<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.star_zero.example.androidmvvm.presentation.add_edit_task.AddEditTaskViewModel" />

    </data>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.design.widget.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/AppTheme.AppBarOverlay">

                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="?attr/colorPrimary"
                    app:popupTheme="@style/AppTheme.PopupOverlay" />

            </android.support.design.widget.AppBarLayout>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:paddingBottom="64dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:paddingEnd="@dimen/activity_horizontal_margin"
                    android:paddingStart="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/activity_vertical_margin">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_layout_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:errorMessage="@{viewModel.taskDTO.titleError}">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/edit_title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_title"
                            android:imeOptions="flagNoExtractUi"
                            android:inputType="text"
                            android:maxLines="1"
                            android:text="@={viewModel.taskDTO.title}"
                            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_layout_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:errorMessage="@{viewModel.taskDTO.descriptionError}">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/edit_description"
                            android:layout_width="match_parent"
                            android:layout_height="120dp"
                            android:gravity="top"
                            android:hint="@string/hint_description"
                            android:imeOptions="flagNoExtractUi"
                            android:text="@={viewModel.taskDTO.description}" />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>
            </ScrollView>
        </LinearLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/button_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/fab_margin"
            android:onClick="@{viewModel::onClickSave}"
            android:src="@drawable/ic_done" />

    </android.support.design.widget.CoordinatorLayout>
</layout>
